--- a/package.json
+++ b/package.json
@@ -164,7 +164,8 @@
     "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "sqlite": "^2.8.0"
   },
   "devEngines": {
     "node": ">=6.x",
