--- a/package.json
+++ b/package.json
@@ -154,12 +154,14 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
     "electron-debug": "^1.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.5",
+    "react-chartjs-2": "^2.6.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^5.0.4",
