--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "chart.js": "^2.7.1",
     "electron-debug": "^1.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
